[refactor] G2B동기화 구현 by 공공데이터포털 문서