@@ -2,6 +2,7 @@ package com.usto.api.g2b.application;
 
 import com.usto.api.common.utils.ShoppingMallEnvelope;
 import com.usto.api.common.utils.ShoppingMallOpenApiClient;
+import com.usto.api.g2b.domain.model.SyncResult;
 import com.usto.api.g2b.infrastructure.mapper.G2bStgMapper;
 import com.usto.api.g2b.domain.model.G2bStg;
 import com.usto.api.g2b.domain.repository.G2bItemCategoryRepository;
@@ -17,6 +18,8 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
+
 import static org.springframework.transaction.annotation.Propagation.REQUIRES_NEW;
 
 @Slf4j
@@ -32,56 +35,81 @@ public class G2bSyncApplication {
     //이쪽 값을 정의해야할거같다.
     private static final String PAGE_NO = "1";        // 페이지 번호 (1페이지부터 조회해야 함)
     private static final String INQRY_DIV = "1";     // 등록일자 기준
-    private static final int NUM_OF_ROWS = 10000;     // 페이지 사이즈 (테스트 성공 값인 10,000 권장)
+    private static final int NUM_OF_ROWS = 10;     // 페이지 사이즈 (공공데이터포털 제한 최대가 10)
     private static final String ACTOR = "SYSTEM";
 
     @Transactional
-    public long syncDaily() {
+    public SyncResult syncDaily() {
         LocalDate now = LocalDate.now();
         String begin = now.minusDays(2).format(DateTimeFormatter.BASIC_ISO_DATE); // 그저께 (시작일)
-        String end = now.minusDays(1).format(DateTimeFormatter.BASIC_ISO_DATE);   // 어제 (종료일)
+        String end = now.minusDays(1).format(DateTimeFormatter.BASIC_ISO_DATE);   // 어제 (종료일) <- 이렇게 하는게 최선(오픈API 업데이트의 한계)
         return syncLatest(begin, end);
     }
 
     @Transactional(propagation = REQUIRES_NEW)
-    public long syncLatest(String begin , String end) {
+    public SyncResult syncLatest(String begin , String end) {
+        log.info("=== Sync Start: {} ~ {} ===", begin, end);
 
         // 외부 수집
         List<ShoppingMallEnvelope.Item> items = fetch(begin, end);
-        log.info("Period : {}~{} , count :{}", begin, end, items.size());
-        
+        int fetched = items.size();
+        log.info("Fetched Total Items: : {}~{} , count :{}", begin, end, items.size());
+
         if (items.isEmpty()) {
-            return 0;
+            return SyncResult.empty(begin, end, 0);
         }
 
-        // 도메인 변환 (Stream 활용)
-        List<G2bStg> domainList = items.stream()
-                .map(G2bStgMapper::toDomain)
-                .filter(Objects::nonNull)
-                .toList();
+        // 도메인 변환 & 중복 제거 (핵심 로직)
+        List<G2bStg> distinctDomainList = items.stream()
+                .map(G2bStgMapper::toDomain) // 변환
+                .filter(Objects::nonNull)    // Null 제거
+                .collect(Collectors.toMap(
+                        G2bStg::getG2bDCd,                  // Key: 물품식별코드 (PK)
+                        stg -> stg,                         // Value: 객체
+                        (existing, replacement) -> existing // 중복 시 기존 것 유지
+                ))
+                .values()
+                .stream()
+                .collect(Collectors.toList());
+
+        log.info("Deduplicated Items to Insert: {} (Duplicates removed: {})",
+                distinctDomainList.size(),
+                items.size() - distinctDomainList.size());
+
+        int deduped = distinctDomainList.size();
+        int duplicated = fetched - deduped;
 
         // 스테이징테이블 비우기 (데이터 준비 후 삭제)
         g2bStgRepository.truncate();
 
-        // 분할 저장 (Batch Insert)-터지지 않게
-        int batchSize =1000;
-        for (int i = 0; i < domainList.size(); i+= batchSize) {
-            g2bStgRepository.bulkInsert(domainList.subList(i, Math.min(i + batchSize, domainList.size())));
+        if (!distinctDomainList.isEmpty()) {
+            g2bStgRepository.bulkInsert(distinctDomainList);
         }
 
         // DB에 추가 사항 반영
-        g2bItemCategoryRepository.insertCategory(ACTOR);
-        g2bItemRepository.insertItems(ACTOR);
+        int countOfInsertedCategory = g2bItemCategoryRepository.insertCategory(ACTOR);
+        int countOfInsertedItem = g2bItemRepository.insertItems(ACTOR);
 
         // DB에 수정 사항 반영
-        g2bItemCategoryRepository.updateCategory(ACTOR);
-        g2bItemRepository.updateItems(ACTOR);
+        int countOfUpdatedCategory = g2bItemCategoryRepository.updateCategory(ACTOR);
+        int countOfUpdatedItem = g2bItemRepository.updateItems(ACTOR);
 
-        long count = g2bStgRepository.countChanged();
+        long changed  = g2bStgRepository.countChanged();
 
 
-        
-        return count;
+
+        return new SyncResult(
+                begin,
+                end,
+                fetched,
+                deduped,
+                duplicated,
+                countOfInsertedCategory,
+                countOfInsertedItem,
+                countOfUpdatedCategory,
+                countOfUpdatedItem,
+                changed
+        );
     }
 
     private List<ShoppingMallEnvelope.Item> fetch(String begin, String end) {
@@ -98,6 +126,7 @@ public class G2bSyncApplication {
         int pages = (int) Math.ceil(total / (double) NUM_OF_ROWS);
 
         for (int p = 2; p <= pages; p++) {
+            log.info("Fetching page {}/{}", p, pages);
             var page = client.fetch(String.valueOf(p), String.valueOf(NUM_OF_ROWS), INQRY_DIV, begin, end);
             if (page != null && page.items() != null) {
                 items.addAll(page.items());
